<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/detail"
            app:menu="@menu/toolbar_detail"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_loc"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/img_loc"
                android:elevation="8dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_loc_name"
                android:paddingTop="8dp"
                android:text="@string/loc_name"
                android:textSize="20sp"
                style="@style/TextStyleB.Bold.MarginDetail" />

            <TextView
                android:id="@+id/tv_loc_adr"
                android:paddingBottom="8dp"
                android:text="@string/detail_address"
                style="@style/TextStyleB.Normal.MarginDetail"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#E7E7E7"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"

                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv1"
                    style="@style/TextStyle.Bold"
                    android:text="@string/open_hours"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/TextStyle.Bold"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    app:layout_constraintStart_toStartOf="@+id/tv1"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv_loc_open"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_open"
                    style="@style/TextStyle.Normal"
                    app:layout_constraintBottom_toBottomOf="@+id/tv1"
                    app:layout_constraintStart_toEndOf="@+id/tv1"
                     />

                <TextView
                    android:id="@+id/tv_loc_rate"
                    style="@style/TextStyle.Normal"
                    android:text="@string/detail_rating"
                    app:layout_constraintStart_toStartOf="@+id/tv_loc_open"
                    app:layout_constraintBottom_toBottomOf="@+id/tv2" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#E7E7E7"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                />

            <TextView
                android:id="@+id/tv3"
                android:text="@string/desc"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                style="@style/TextStyleB.Bold.MarginDetail"
                />

            <TextView
                android:id="@+id/tv_loc_desc"
                android:text="@string/detail_desc"
                android:paddingBottom="100dp"
                android:justificationMode="inter_word"
                style="@style/TextStyleB.Normal.MarginDetail"
                tools:targetApi="o" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>